Changed columns size to prevent text wrap

--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ button:hover{
     grid-area: view;
     padding: 20px;
     display: grid;
-    grid-template: minmax(200px,1fr) minmax(200px,1fr) / minmax(330px,1fr) 260px;
+    grid-template: minmax(200px,1fr) minmax(200px,1fr) / minmax(310px,1fr) 280px;
     grid-template-areas:
     "projects announces"
     "projects trending";
